[fix] word-block-description goes vertical when too wide
Plus, catch an error when accessing non-existing entries of the tree

--- a/namess/css/collapsible-names.css
+++ b/namess/css/collapsible-names.css
@@ -181,6 +181,10 @@ div[name="collapsible-area"] {
   }
 }
 
+.word-block-description-vertical {
+  flex-direction: column;
+}
+
 .word-block-glosses {
   flex: 1.5;
   display: flex;
